<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FunDo</string>
    <string name="app_id">1384401078477660</string>
    <string name="mediatek">FunDoWear inc.</string>
    <string name="release_date">Release date</string>
    <string name="version">Version</string>
    <string name="date">2015.06.16</string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="analysis">Analysis</string>
    <string name="str_mtksmartdevice">FunDo</string>
    <string name="str_mtksmartwatch">FunDo</string>
    <string name="cannot_scan">Cannot scan</string>
    <string name="scan_pre">Scan</string>
    <string name="menu_scan">Find</string>
    <string name="menu_stop">Stop</string>
    <string name="ble_not_supported">BLE is not supported in the Smart Phone</string>
    <string name="error_bluetooth_not_supported">Bluetooth not support</string>
    <string name="connect_fail">Connection fails</string>
    <string name="add_watch_hint">Tap the watch image to connect it with your smart phone</string>
    <string name="pls_switch_bt_on">Please switch on Bluetooth</string>
    <string name="unknown_device">Unknown device</string>
    <string name="connect_error">Connect Error</string>
    <string name="no_connect">Smart Device is not connected</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="switch_mode_spp">Switch Mode (SPP)</string>
    <string name="switch_mode_dogp">Switch Mode (GATT)</string>
    <string name="cannot_switch_mode">Cannot switch mode</string>
    <string name="device_info">Device Info</string>
    <string name="change_name_pre">Change Name</string>
    <string name="change_name">Change Device Name</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">connection failed</string>
    <string name="disconnecting">Disconnecting...\nTake some time when data is transmitting</string>
    <string name="disconnect_dialog_title">Disconnect</string>
    <string name="disconnect_dialog_message">Would you like to disconnect SmartDevice?</string>
    <string name="shake_hand_fail">Please check your remote device</string>
    <string name="complete_percent">completed 0</string>
    <string name="active_time">Active time</string>
    <string name="active_time_cunts">0h</string>
    <string name="kilometer">Km</string>
    <string name="heart_rate_lasttime">1 hours ago</string>
    <string name="highest_heart">Max Rate</string>
    <string name="mean_heart">Avg Rate</string>
    <string name="minimum_heart">Min Rate</string>
    <string name="device">MY DEVICE</string>
    <string name="smart_accessory_application">APPS AND SETTINGS</string>
    <string name="select_blocks_activity">Select apps to unblock</string>
    <string name="select_data_device">Select the data display device</string>
    <string name="the_device_is_connected">The device is currently connected</string>
    <string name="the_last_connected_device">The last connected device</string>
    <string name="select_a_device">Select a device</string>
    <string name="all_devices">All devices</string>
    <string name="find_me_button">Find Device</string>
    <string name="find_me_using">Stop</string>
    <string name="alert_setting">Alert Settings</string>
    <string name="alert_setting_find_phone">Find phone</string>
    <string name="city_search_error">search city failed</string>
    <string name="temp_unit">Temperature units</string>
    <string name="city">City</string>
    <string name="choose_city">Choose City</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="no_city">No City (Edit to Set City)</string>
    <string name="current_city">Current City is :<xliff:g id="city">%s</xliff:g> (Edit to Change City)</string>
    <string name="about">About</string>
    <string name="about_tittle">About MTK smart device manager</string>
    <string name="manufacture">Manufacturer</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_content">Would you like to uninstall this app?</string>
    <string name="install_hint">Please Install</string>
    <string name="install_background">Some App installing in the background, it may take a few minutes, please wait</string>
    <string name="install_done">Install Done</string>
    <string name="pre_install">Pre-installed in wearable device</string>
    <string name="uninstall_hint">Doesn\'t exist in local, please uninstall</string>
    <string name="launch_app">Click to Launch</string>
    <string name="notifications">Application push</string>
    <string name="install_application">Install application</string>
    <string name="installing">Installing</string>
    <string name="install_into">into your smart watch</string>
    <string name="warning_not_install">application not installed</string>
    <string name="launchfail">Load Application Failed</string>
    <string name="reachmax">Maximum downloading amount reached.</string>
    <string name="download_fail">Failed to download</string>
    <string name="file_lost">install failed, some files lost, please check.</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="installing_hint">Installing...</string>
    <string name="downloading_hint">Downloading...</string>
    <string name="app_store">Smart device APP store</string>
    <string name="uninstall_allvxp">Uninstall All VXP Items</string>
    <string name="take_mins">"it may take a few minutes, please wait"</string>
    <string name="try_later">Please try later</string>
    <string name="test">Test notifications</string>
    <string name="install_fail">Install fail</string>
    <string name="install_fail_code"><xliff:g id="appname">%s</xliff:g> install failed, <xliff:g id="error">%s</xliff:g>. Deleting VXPs in watch.</string>
    <string name="install_code_success">success</string>
    <string name="install_code_error">unknown error</string>
    <string name="install_code_error1">the parameter app_path is NULL</string>
    <string name="install_code_error2">reach max installed app number</string>
    <string name="install_code_error3">get app name tag error</string>
    <string name="install_code_error4">alloc memory from engine fail</string>
    <string name="install_code_error5">shortcut already installed</string>
    <string name="install_code_error6">get shortcut installed info file fail</string>
    <string name="install_code_error7">app already installed</string>
    <string name="install_code_error8">get icon tag or app name tag fail</string>
    <string name="install_code_error9">write installed info for build-in app fail</string>
    <string name="install_code_error10">save icon fail</string>
    <string name="install_code_error11">save installed info for vxp install fail</string>
    <string name="app_list">My Applications</string>
    <string name="sms_preference_title">SMS service</string>
    <string name="call_preference_title">Call service</string>
    <string name="accessibility_prompt_title">Enable Accessibility</string>
    <string name="accessibility_prompt_content">BTNotification is required to send applications\' notifications to your remote device. Press "OK" to go to the Accessibility settings to activate it.</string>
    <string name="notificationlistener_prompt_title">Enable Notification</string>
    <string name="notificationlistener_prompt_content">FunDo is required to send applications\' notifications to your remote device. Press "OK" to go to the Notification access settings to activate it.</string>
    <string name="progress_dialog_title">Loading</string>
    <string name="progress_dialog_message">Please wait&#8230;</string>
    <string name="save_successfully">Set up successfully</string>
    <string name="goalstep_set_area">Goal setting for the range of 4000 to 20000.</string>
    <string name="personal_apps_title">Personal App</string>
    <string name="system_apps_title">System App</string>
    <string name="button_save">Save</string>
    <string name="button_select_all"> All</string>
    <string name="button_deselect_all">Unselect All</string>
    <string name="button_unblock">Unblock</string>
    <string name="notification_ticker_text">BTNotification connected remote device</string>
    <string name="notification_ticker_battery">SmartDevice battery capacity: %1$d%%</string>
    <string name="notification_title">FunDo</string>
    <string name="notification_content">SmartDevice Connected</string>
    <string name="missed_call">Missed Call</string>
    <string name="accessibility_description">Activate service in "auxiliary function"</string>
    <string name="batterylow">Battery low</string>
    <string name="pleaseconnectcharger">The battery is getting low,Please connect charger, Capacity</string>
    <string name="str_searching">Searching</string>
    <string name="str_send">send</string>
    <string name="str_sendtocopy">Send to paste board</string>
    <string name="music">Music</string>
    <string name="none">None</string>
    <string name="write_config_not_done">Writing app config</string>
    <string name="notification_action_open">Open</string>
    <string name="smart_device_firmware">Smart device firmware</string>
    <string name="smart_device_tittle">CURRENT FIRMWARE</string>
    <string name="menu_item_manager">Smart device manager</string>
    <string name="version_title">Version</string>
    <string name="check_new_version">Check New Version</string>
    <string name="fimrware_update_redbend_fota">Firmware update(Redbend FOTA)</string>
    <string name="range_category_text">RANGE ALERT</string>
    <string name="range_alert_text">Range Alert</string>
    <string name="range_type_text">When</string>
    <string name="range_size_text">Range Size</string>
    <string name="range_calibrate_text">Calibrate range size</string>
    <string name="disconnection_text">DISCONNECTION SETTINGS</string>
    <string name="disconnection_waring_title">Disconnect alert</string>
    <string name="phone_alert_settings">PHONE ALERT SETTINGS</string>
    <string name="ringtone_text">Alert ring</string>
    <string name="vibration_text">Alert vibration</string>
    <string name="default_range_alert_type_value">1</string>
    <string name="default_range_alert_size_value">1</string>
    <string name="pxp_calibrate_message">Please put the two devices to a favorite distance, then press this item</string>
    <string name="label_sn">Serial Number</string>
    <string name="soscall">SOS Call</string>
    <string name="log_start">Catch Remote Device Log (start)</string>
    <string name="login_hint_name">Email</string>
    <string name="registered_button_text">Register</string>
    <string name="registered_emali">Account：</string>
    <string name="registered_password">Password：</string>
    <string name="registered_confirm_password">Confirm Password：</string>
    <string name="registered_hint_pass">6&#8211;16, number, letters,symbol</string>
    <string name="registered_hint_ok_pass">Please confirm your password </string>
    <string name="registered_agree_to_deal">Whether consent agreement</string>
    <string name="registered_agree_to_deal_show">（Click to view）</string>
    <string name="write_off">Logout</string>
    <string name="about_watch_mall">Watch or bracelet Mall</string>
    <string name="about_privacy_policy">Privacy policy</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="thesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="choose_date">Select Dates</string>
</resources>