<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:id="@+id/li_registered">
    
    <include 
        layout="@layout/main_toolbar_global"/>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_shape"
        android:padding="@dimen/activity_vertical_margin">
     	<LinearLayout 
     	    android:id="@+id/relative_login"
     	    android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal"
         	android:padding="@dimen/activity_horizontal_margin">
         	
         	<TextView 
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:text="@string/registered_emali"/>
    		<android.support.design.widget.TextInputLayout
       			android:layout_width="match_parent"
       			android:layout_height="wrap_content">
    		<EditText
        		android:id="@+id/registered_name_id"
        		android:hint="@string/login_hint_name"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>
    	</LinearLayout>
    	<LinearLayout 
    	    android:id="@+id/linear_password"
    	    android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal"
         	android:padding="@dimen/activity_horizontal_margin"
         	android:layout_below="@id/relative_login">
    		<TextView 
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:text="@string/registered_password"/>
    		<android.support.design.widget.TextInputLayout
       			android:layout_width="match_parent"
       			android:layout_height="wrap_content">
    		<EditText 
	        	android:id="@+id/registered_password_id"
	        	android:hint="@string/registered_hint_pass"
	        	android:layout_height="wrap_content"
	        	android:layout_width="match_parent"
	        	android:inputType="textPassword"
        	/>
    		 </android.support.design.widget.TextInputLayout>
    	</LinearLayout>
    	
    	<LinearLayout 
    	    android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal"
         	android:padding="@dimen/activity_horizontal_margin"
         	android:layout_below="@id/linear_password">
    		<TextView 
         	    android:layout_width="wrap_content"
         	    android:layout_height="wrap_content"
         	    android:text="@string/registered_confirm_password"/>
    		<android.support.design.widget.TextInputLayout
       			android:layout_width="match_parent"
       			android:layout_height="wrap_content">
    		<EditText 
	        	android:id="@+id/registered_againpassword_id"
	        	android:hint="@string/registered_hint_ok_pass"
	        	android:layout_height="wrap_content"
	        	android:layout_width="match_parent"
	        	android:inputType="textPassword"
        	/>
    		</android.support.design.widget.TextInputLayout>
    	</LinearLayout>
    </RelativeLayout>
    
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="18dp">
        <!-- <RadioButton 
            android:id="@+id/unselete_ra"
            android:layout_width="wrap_content"
       		android:layout_height="wrap_content" 
       		android:button="@drawable/night_biz_vote_unselected"/> -->
        <CheckBox
        android:id="@+id/unselete_ra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:clickable="true"    
        />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_agree_to_deal"
            />
        <TextView 
            android:id="@+id/dealtv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registered_agree_to_deal_show"
            android:autoLink="web"
            android:textColor="@android:color/holo_blue_dark"
            android:clickable="true"
            />
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_shape"
        android:layout_margin="15dp">
        <!-- 加入5.0特效 -->
    <TextView 
        android:id="@+id/registered_button"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/registered_button_text"
        android:gravity="center"
        />

    </LinearLayout>
</LinearLayout>
