<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/li_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/global_background_content"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:splitMotionEvents="false"
    android:orientation="vertical"
    tools:context="com.szkct.weloopbtsmartdevice.main.AboutActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title"
        android:layout_gravity="center"
        android:background="?attr/global_background" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="?attr/global_text_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:scaleType="centerInside"
            android:src="?attr/global_title_return_back" />

        <ImageView
            android:id="@+id/img_bluetooth_sesarch"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="5dp"
            android:scaleType="centerInside"
            android:src="@drawable/iconfont_jiazai"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:text="@string/write_off"
            android:textColor="?attr/global_text_color"
            android:textSize="14sp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:layout_alignParentBottom="true"
            android:background="?attr/health_reports_head_line_color" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/str_mtksmartdevice"
        android:scaleType="centerInside"
        android:src="@drawable/about_logo_b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?attr/global_text_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/version_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/canlendar_text_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_marginTop="30dp"
        android:background="?attr/health_reports_head_line_color" />

    <TextView
        android:id="@+id/versionRenewal_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_menu"
        android:background="?attr/global_background"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical|left"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/check_new_version"
        android:textColor="?attr/global_text_color"
        android:textSize="@dimen/small_menu_size" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="?attr/health_reports_head_line_color" />

    <TextView
        android:id="@+id/watch_fota_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical|left"
        android:padding="10dp"
        android:text="@string/fimrware_update_redbend_fota"
        android:textColor="?attr/global_text_color"
        android:textSize="22sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/watch_mall_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/about_watch_mall"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/privacy_policy_tv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_menu"
        android:background="?attr/global_background"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical|left"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:text="@string/about_privacy_policy"
        android:textColor="?attr/global_text_color"
        android:textSize="@dimen/small_menu_size"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="?attr/health_reports_head_line_color"
        android:visibility="gone"/>

    <!-- chendalin modify 隐藏test按钮 -->

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:visibility="gone" />

    <Button
        android:id="@+id/log_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_start"
        android:visibility="gone" />
  <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
       android:layout_weight="1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     
       
        android:layout_gravity="center_horizontal"
        android:textColor="#9B9B9C"
        android:text="Shenzhen FenYun Technology Co. Ltd." />

    <TextView
        android:id="@+id/qqgroup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#9B9B9C"
        android:paddingBottom="20dp"
        android:text="Copyright © 2015-2018,All Rights Reserved" />

</LinearLayout>